Fix token issues
